# asreview

./: .coveragerc  .dockerignore  .gitattributes  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  .zenodo.json  1.1  Authentication.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEVELOPMENT.md  DOCS.md  Dockerfile  LICENSE  MANIFEST.in  README.md  README_old.md  SECURITY.md  app.json  asreview_config.toml  auth_conversion.py  azuredeploy.json  azuredeploy.parameters.json  config.toml  contributing.md  contributors.md  deploy.sh  development_setup.sh  package-lock.json  package.json  pyproject.toml  pytest.ini  ranking_history_visualization.py  requirements.txt  (+8 more)
.github/ISSUE_TEMPLATE/: bug.md  feature-request.md  user-interface.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci-core.yml  ci-frontend.yml  ci-integration.yml  ci-webapp.yml  ci-workflow.yml  docker.yml  docs.yml  extensions.yml  pythonpackage.yml
Docker/: README.md
Docker/auth_verified/: .env  Dockerfile_backend  Dockerfile_frontend  asreview.conf  docker-compose.yml  flask_config.toml  wsgi.py
Docker/simple/: Dockerfile
asr/: __init__.py  __main__.py  _version.py  balanced_al.py  base.py  config.py  init_sampling.py  logging.py  readers.py  review.py  select_init_indices.py  systematic_review_active.py  types.py  utils.py
asr/balance_strategies/: README.md  __init__.py  base.py  full_sampling.py  simple.py  triple_balance.py  undersample.py  undersampling.py
asr/models/: README.md  __init__.py  embedding.py  lstm.py  lstm2.py  lstm_base.py  lstm_pool.py  naivebayes.py  sklearn_models.py
asr/query_strategies/: README.md  __init__.py  base.py  interface.py  max_sampling.py  model_change_sampling.py  rand_max.py  random_sampling.py  uncertainty_sampling.py
asr/utils/: utils.py
asreview/: __init__.py  __main__.py  _deprecated.py  _version.py  ascii.py  balance_strategies.py  balanced_al.py  base.py  base_model.py  batch.py  cluster.py  compat.py  config.py  data.py  datasets.py  exceptions.py  extensions.py  feature_extraction.py  fuzzy.py  hdf5_logging.py  init_sampling.py  json_logging.py  learner.py  logging.py  metrics.py  migrate.py  project.py  query_strategies.py  readers.py  review.py  search.py  settings.py  statistics.py  stopping.py  test.ipynb  types.py  utils.py
asreview/analysis/: __init__.py  analysis.py  metrics.py  readers.py  statistics.py
asreview/auth/: database.py  login_required.py  models.py
asreview/balance_strategies/: __init__.py  base.py  double.py  double_balance.py  full_sampling.py  simple.py  triple.py  triple_balance.py  undersample.py  undersampling.py  utils.py
asreview/data/: __init__.py  _asreview_data.py  _load_data.py  base.py  base_reader.py  config.py  loader.py  paper_record.py  record.py  ris.py  search.py  statistics.py  store.py  tabular.py  utils.py
asreview/database/: contextmanager.py  database.py  sqlstate.py  store.py
asreview/entry_points/: __init__.py  algorithms.py  auth.py  auth_converter.py  auth_tool.py  base.py  batch.py  describe.py  gui.py  lab.py  oracle.py  run_model.py  simulate.py  state_inspect.py
asreview/feature_extraction/: __init__.py  base.py  cluster.py  doc2vec.py  embedding_idf.py  embedding_lstm.py  sbert.py  tfidf.py  utils.py
asreview/io/: __init__.py  csv_reader.py  csv_writer.py  excel_reader.py  excel_writer.py  paper_record.py  pubmed_xml_reader.py  ris.py  ris_reader.py  ris_writer.py  tabular.py  tsv_writer.py  utils.py  xml_reader.py
asreview/lib/: __init__.py  datasets.py  exceptions.py  project.py  search.py  settings.py
asreview/logging/: __init__.py  base.py  dict.py  hdf5.py  json.py  utils.py
asreview/metrics/: __init__.py  metrics.py  utils.py
asreview/models/: __init__.py  _metadata.py  balance.py  balancers.py  base.py  classifiers.py  cli.py  default.py  dense_nn.py  deprecated.py  embedding.py  feature_extraction.py  feature_extractors.py  keras.py  logistic.py  lstm_base.py  lstm_pool.py  mixin.py  models.py  nb.py  nn_2_layer.py  queriers.py  query.py  rf.py  sklearn_models.py  stoppers.py  stopping.py  svm.py  utils.py
asreview/project/: __init__.py  api.py  exceptions.py  migrate.py  schema.py
asreview/query_strategies/: __init__.py  base.py  cluster.py  cluster_sampling.py  max.py  max_sampling.py  mixed.py  model_change_sampling.py  rand_max.py  random.py  random_sampling.py  uncertainty.py  uncertainty_sampling.py  utils.py
asreview/review/: __init__.py  base.py  base_new.py  base_old.py  factory.py  minimal.py  minimal_legcay.py  oracle.py  simulate.py
asreview/simulation/: __init__.py  algorithms.py  analysis.py  batch_generator.py  cli.py  (+6 more)
base/: dataset.py
docker/: README.md
docs/: Makefile  requirements.txt  viz.md  viz.rst
example_notebook/: example_notebook.ipynb
hpc/: make_sr_lstm_batch_active.R  make_sr_lstm_batch_passive.R
images/: deepreview1518.xml
models/: lstm.py
preprocessing/: read_and_clean_schoot_lgmm_ptsd.R
query_strategies/: random_sampling.py  uncertainty_sampling.py
scripts/: __init__.py  auth_conversion.py
src/: aggregation.ipynb  data_prep.py  gettingStarted.ipynb  project_overview.ipynb  select_init_indices.py  systematic_review_active.py
test/: test_balance.py  test_embedding.py  test_feature.py  test_logs.py  test_oracle.py  test_query.py  test_readers.py  test_ris.py  test_simulate.py
test.asreview/: project.json
test_project/: project.json
tests/: conftest.py  demo_data.json  test_api_lib.py  test_asdata.py  test_balance.py  test_classifiers.py  test_converter.py  test_data.py  test_data_store.py  test_database.py  test_datasets.py  test_embedding.py  test_feature.py  test_init.py  test_learner.py  test_metrics.py  test_migrate_project.py  test_models.sh  test_project.py  test_query.py  test_random_state.py  test_readers.py  test_record.py  test_search.py  test_serialization.py  test_settings.py  test_simulate.py  test_simulate_cli.py  test_state.py  test_state_legacy.py  test_writers.py
utils/: config.py  utils.py
(+1160 files in other folders)
